--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tony Gilbert Rozario Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="styles/Portfolio.css">
+
 </head>
-<body>
+<body class="front-open-sans">
     
+    <header>
+        <nav>
+            <div class="Logo">
+                <h2>To<Span class="color-orange">n</Span>y</h2>
+            </div>
+            <ul class="manu">
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><button class="btn">Hire Me</button></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
